src/objects/CurrencyExchange__c.object
<CustomObject>
    <description>Dated currency exchange</description>
    <fields>
        <fullName>Description__c</fullName>
        <formula>IF( RecordType.DeveloperName == &apos;Current&apos;,
    &apos;Current &apos; &amp; TEXT(CurrencyIsoCode),
    TEXT(CurrencyIsoCode) &amp; &apos; - (&apos; &amp;
         IF( NOT(ISBLANK( StartDate__c )), &apos; Effective &apos; &amp; TEXT( StartDate__c ), &apos;&apos; ) &amp;
         IF( NOT(ISBLANK( EndDate__c )), &apos; Until &apos; &amp; TEXT( EndDate__c ), &apos;&apos; ) &amp;
    &quot; )&quot;
)</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateFormula__c</fullName>
        <formula>EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <inlineHelpText>Last day that the Currency Exchange Rate is in effect. (Automatically handled)</inlineHelpText>
        <label>End Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExchangeRate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Conversion rate of this currency type against the corporate currency.
(e.g: 1.4 means 1.4 USD is needed to purchase 1 of this currency)</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCurrent__c</fullName>
        <formula>if( RecordTypeName__c == &quot;Current&quot;, true, false )</formula>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OfferRate__c</fullName>
        <inlineHelpText>The rate to be used by promoters when planning offers</inlineHelpText>
        <label>Offer Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <defaultValue>&quot;Dated&quot;</defaultValue>
        <description>Record Type Name of the Currency Exchange.
(Used to ensure formula field limits are adhered to)</description>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <inlineHelpText>Date that the Currency Exchange rate takes effect</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEST_Is_Dated_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEST Is Dated Currency</label>
        <type>Checkbox</type>
    </fields>
    <label>Currency Exchange</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RecordTypeName__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IsCurrent__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDateFormula__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ExchangeRate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CurrencyExchange__c.Current</value>
        </filters>
        <label>Current</label>
    </listViews>
    <listViews>
        <fullName>Historical_Canadian</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ExchangeRate__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CurrencyExchange__c.Dated</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>CAD</value>
        </filters>
        <label>Historical Canadian</label>
    </listViews>
    <listViews>
        <fullName>Historical_GBP</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ExchangeRate__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDateFormula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CurrencyExchange__c.Dated</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>GBP</value>
        </filters>
        <label>Historical British Pound</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Currency Exchange Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Exchanges</pluralLabel>
    <recordTypes>
        <fullName>Current</fullName>
        <active>true</active>
        <description>The single set of current Currency Exchange Rates (1 per IsoType)</description>
        <label>Current</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dated</fullName>
        <active>true</active>
        <description>Historical / Projected Currency Exchange rates.</description>
        <label>Dated</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>